fixed spacing bugs

--- a/css/main.scss
+++ b/css/main.scss
@@ -425,8 +425,8 @@ h2 {
 .about-blurb {
   padding-left: 0.2em;
   padding-right: 0.2em;
-  margin-bottom: 2em;
-  margin-top: -0.5em;
+  margin-bottom: 1em;
+  margin-top: -1em;
   line-height: 1;
   font-size: 4em;
   text-align: justify;
@@ -854,8 +854,8 @@ hr {
     padding : {
       left: 1em;
       right: 1em;
-      top: 8.7em;
-      bottom: 4em;
+      top: 7em;
+      bottom: 3em;
     }
     line-height: 1.3;
     font-size: 1.4em;
